# -ahahahahahahahahah

./: .gitignore  LLM_기반_데이터_생성.ipynb  PEFT_Text2SQL.ipynb  QLoRA.ipynb  README (1).md  README.md  vllm.ipynb
ai-special-skeleton/1. skeleton01/: .env.example  LLM_기반_데이터_생성.ipynb  README.md  pyproject.toml
ai-special-skeleton/1. skeleton01/data/: train.csv
ai-special-skeleton/2. skeleton02/: PEFT_Text2SQL.ipynb  README.md  inference.py  pyproject.toml
ai-special-skeleton/2. skeleton02/data/: validation.csv
ai-special-skeleton/2. skeleton02/test-suite-sql-eval-master/: base_model_predict.txt  exec_eval.py  gold.txt  parse.py
ai-special-skeleton/2. skeleton02/test-suite-sql-eval-master/evaluation_examples/: gold.txt  predict.txt
ai-special-skeleton/3. skeleton03/: .gitignore  QLoRA.ipynb  README.md  inference.py  pyproject.toml
ai-special-skeleton/3. skeleton03/data/: train.csv
ai-special-skeleton/3. skeleton03/test-suite-sql-eval-master/: base_model_predict.txt  evaluate_classical.py  evaluation.py
ai-special-skeleton/4. skeleton04/: .gitattributes  .gitignore  README.md  pyproject.toml  vllm.ipynb
ai-special-skeleton/4. skeleton04/checkpoint-100/: README.md  adapter_config.json  adapter_model.safetensors  optimizer.pt  rng_state.pth  scheduler.pt  tokenizer_config.json  trainer_state.json
