[project]
name = "skeleton-4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate==1.10.1",
    "bitsandbytes==0.49.1",
    "datasets==4.0.0",
    "ipykernel==7.1.0",
    "jupyter==1.1.1",
    "numpy==2.1.0",
    "nvidia-ml-py==13.590.48",
    "pandas==2.2.3",
    "peft==0.17.1",
    "torch==2.9.0",
    "transformers==4.56.0",
    "vllm==0.13.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cu129" }

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true
